--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,6 @@ dependencies {
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     //SuperAdapter
     compile 'org.byteam.superadapter:superadapter:3.+'
+    //carouselView
+    compile 'com.mevv:carouselview:1.0.0'
 }
